# CNOME

./: CMakeLists.txt  README.md  httplib.h  index.html  run.sh  test.cpp
Documentation/: .~lock.results.ods#  results.ods
cache/: .gitignore  package-lock.json  server.js
cache/models/: CacheSchema.js
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/assets/: mutationInfo.json  proteinImages.json  similarityImages.json
frontend/src/components/: Barplot.tsx  Histogram.tsx  KMerAnalyticsDashboard.tsx  MutationCard.tsx  Navbar.tsx  PieChart.tsx  Tooltip.tsx
frontend/src/context/: GeneContext.tsx
frontend/src/pages/: GeneticSimilarity.tsx  Home.tsx  KMerAnalytics.tsx  MutationDetection.tsx  ViewGene.tsx
frontend/src/response-models/: KMerResponse.ts  MutationResponse.ts  SimResponse.ts
frontend/src/services/: api.ts  cache.ts  decompressgene.js  hashgene.ts
server/: CMakeLists.txt  server.cpp
server/include/: JSONresponsehandler.h  analytics.h  compressGene.h
server/src/: JSONresponsehandler.cpp  analytics.cpp  compressGene.cpp  server.cpp
testing/: .gitignore
testing/API tests/: api.js  networkTests.js  package-lock.json  package.json
testing/Test Generators/: a.out  testGen.c
testing/tcs/: broke.txt  cancer_648124_244.txt  cysticfibrosis_531814_132.txt  cysticfibrosis_777514_494.txt  hemophilia_519738_452.txt  hemophilia_602139_321.txt  hemophilia_627792_139.txt  hemophilia_747246_44.txt  huntington_712869_78.txt  nf1_779868_256.txt  nf1_781184_395.txt  nf1_796575_475.txt  none_659106_484.txt
(+5 files in other folders)
